Fixing header alignment and hr

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
-    --color-text: white;
-    --color-background: #010101;
-    --color-background-secondary: #111;
+    --color-text: #010101;
+    --color-background: #ffffff;
+    --color-background-secondary: #ececec;
     --color-secondary: rgb(0 0 255);
 
     --text-small: 12pt;
@@ -14,6 +14,13 @@
     --page-width: 1200px;
     --radius: 4px;
     --border-width: 1px;
+}
+
+.page-width {
+    width: var(--page-width);
+}
+.center {
+    margin: auto;
 }
 
 body {
@@ -46,13 +53,15 @@ header, footer, main {
     padding: 2rem;
     margin: auto;
     width: var(--page-width);
-    font-weight: 200;
+    font-weight: 300;
     line-height: 1.6;
     font-size: var(--text-medium);
     /* border-left: .25rem solid var(--color-secondary); */
 }
 header {
-    flex-direction: column;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding-top: 0;
     padding-bottom: 0;
     margin-bottom: 0.5rem;
@@ -61,6 +70,7 @@ header #header-title {
     text-decoration: none;
     font-size: var(--text-small);
     color: var(--color-text);
+    display: block;
 }
 #header-title h1 {
     font-family: var(--font-blocky);
